# nemo-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  context-first-development.md  pyproject.toml
.claude/skills/close-session/: SKILL.md
.claude/skills/issue-new/: SKILL.md
.claude/skills/issue-start/: SKILL.md
.claude/skills/new-decision/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/start-session/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/validate-context/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  work-unit.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  STACK.md  session-flow.md
docs/decisions/: 001-initial-architecture.md  002-tech-stack.md  003-token-authentication.md  004-switch-to-python-stack.md  005-github-flow-branching.md  006-instruments-domain.md  007-versioning-and-changelog.md  008-portfolio-domain.md  010-instrument-price-history.md  011-portfolio-movements.md  012-refresh-token-flow.md  013-adr-before-implementing.md  014-english-as-context-language.md  015-skills-over-slash-commands.md  016-document-corrections-not-fixes.md  017-atomic-task-instructions.md  018-session-close-ritual.md  019-short-sessions-over-long.md  020-pr-review-against-context.md  021-work-units-external-tracker.md  022-no-ai-attribution.md  023-continuous-integration.md  024-repository-governance.md  025-interactive-login.md  026-auth-session-layer.md  027-auth-command-group.md  _index.md
scripts/: verify_reactive_fallback.py  verify_refresh.py
src/nemo_cli/: __main__.py  cli.py  config.py
src/nemo_cli/api/: client.py
src/nemo_cli/auth/: jwt.py  service.py  session.py  token_store.py
src/nemo_cli/commands/: auth.py  instruments.py  login.py  logout.py  portfolio.py  status.py  whoami.py
src/nemo_cli/instruments/: international.py  local.py  prices.py
src/nemo_cli/portfolio/: movements.py  summary.py
tests/: conftest.py  test_cli.py  test_config.py
tests/api/: test_client.py
tests/auth/: test_jwt.py  test_service.py  test_session.py  test_token_store.py
tests/commands/: test_auth_commands.py  test_instruments_commands.py  test_portfolio_commands.py
tests/instruments/: test_international.py  test_local.py  test_prices.py
tests/portfolio/: test_movements.py  test_summary.py
