[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemo-cli"
version = "0.2.0"
description = "Personal CLI to query Chilean stockbroker portals (currently compatible with portalclientes.vectorcapital.cl)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
    "rich>=13.0",
]

[project.scripts]
nemo = "nemo_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.5",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_cli"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
