[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemo-cli"
version = "0.0.1"
description = "Personal CLI to query Chilean stockbroker portals (currently compatible with portalclientes.vectorcapital.cl)."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alberto Marturelo Lorenzo", email = "amarturelo@gmail.com" },
]
keywords = ["cli", "finance", "broker", "chile", "stockbroker", "investment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/albertomarturelo/nemo-cli"
Repository = "https://github.com/albertomarturelo/nemo-cli"
Issues = "https://github.com/albertomarturelo/nemo-cli/issues"
Changelog = "https://github.com/albertomarturelo/nemo-cli/blob/main/CHANGELOG.md"

[project.scripts]
nemo = "nemo_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.5",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_cli"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
